agrega tabla de CLES para lab07 para las diferentes pruebas

--- a/G4101_lab05_estadistica_intro-inferencial.qmd
+++ b/G4101_lab05_estadistica_intro-inferencial.qmd
@@ -26,7 +26,7 @@ execute:
 
 ```{r}
 #| label: setup
-#| include: false
+#| include: true
 
 library(DescTools)    # funciones estadisticas
 library(tidyverse)
