corrige datos de ejemplos y agrega posibilidad de crear pdf con elementos html en el documento del lab 11

--- a/G4101_lab11_secuencias.qmd
+++ b/G4101_lab11_secuencias.qmd
@@ -14,7 +14,8 @@ format:
     code-summary: "Codigo"
     code-tools: true
     html-math-method: katex
-  pdf: default
+  pdf: 
+    prefer-html: false
   docx: default
 execute:
   warning: false
